manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-deployment
spec:
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-flask-pod
        image: dhyey0208/python-app:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
