manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-ingress
spec:
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-flask-service
            port: 
              number: 8080
